# diff-lsp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  diff-lsp-status.diff-test  run_checks.sh  todo.org
.github/: CODEOWNERS
.github/workflows/: rust.yml
docs/: requirements.txt
docs/source/: conf.py  configuration.rst  editors.rst  index.rst  installation.rst  usage.rst
src/: client.rs  lib.rs  main.rs  server.rs  test_data.rs  utils.rs
src/parsers/: code_review.rs  magit.rs  mod.rs  utils.rs
tests/: lib.rs  server.rs  test_code_review_server.rs  test_lib.rs  test_raw_git_diff.rs  test_server.rs
tests/data/: big_rust_diff.magit_status  full_go_diff.code_review  go_diff.code_review  go_diff.code_review_server  go_diff.magit_status  rust_diff.bun_client  rust_diff.magit_status  worktree_test.init_params
