[package]
name = "diff-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0.116"
serde = "1.0.198"
anyhow = "1.0.82"
regex = "1.10.4"
